# oop_exercise_08

./: CMakeLists.txt  ConsoleProcessor.cpp  ConsoleProcessor.h  Figure.cpp  Figure.h  FigureFactory.cpp  FigureFactory.h  FileProcessor.cpp  FileProcessor.h  Pentagon.cpp  Pentagon.h  Processor.h  Publisher.cpp  Publisher.h  README.md  Rhombus.cpp  Rhombus.h  Trapeze.cpp  Trapeze.h  main.cpp  test.cpp  test.sh  test_01.result  test_01.test
